--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -20,6 +20,12 @@ jobs:
       
       - name: Build with npm
         run: npm run build
+
+      - name: Make dist directory
+        run: mkdir shopizer-admin-dist
+
+      - name: Copy dist directory
+        run: cp -r dist shopizer-admin-dist/dist
       
       - name: Azure CLI Login
         uses: azure/login@v1
@@ -34,5 +40,5 @@ jobs:
           service-name: ${{ vars.SPRING_APPS_SERVICE_NAME }}
           app-name: ${{ vars.SPRING_APPS_APP_NAME }}
           use-staging-deployment: false
-          package: ${{ github.workspace }}/dist
-          build-env: "-BP_WEB_SERVER nginx -BP_WEB_SERVER_ROOT . -BP_WEB_SERVER_ENABLE_PUSH_STATE true -BP_NODE_VERSION ~14"
+          package: ${{ github.workspace }}/shopizer-admin-dist
+          build-env: "-BP_WEB_SERVER nginx -BP_WEB_SERVER_ROOT dist -BP_WEB_SERVER_ENABLE_PUSH_STATE true"
